--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
     "reactflow": "^11.11.4",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.3"
   },
@@ -35,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
