--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@xyflow/react": "^12.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.7",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
